[package]
name = "number_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = ["default_fonts", "glow", "persistence"] }
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
axum = "*"
serde = { version = "1.0", features = ["derive"] }